--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ subprojects{
         implementation 'log4j:log4j:1.2.17'
         implementation 'junit:junit:4.4'
         implementation 'org.openjdk.jol:jol-core:0.10'
+        implementation 'org.springframework:spring-core:5.1.14.RELEASE'
     }
 }
 
